--- a/app/css/app.less
+++ b/app/css/app.less
@@ -1,3 +1,56 @@
-h1{
-	color: green;
+@maxWidth : 340px;
+
+body{
+
+}
+
+h1 {
+    color: green;
+}
+
+mm-search {
+    ul {
+        padding: 0;
+        li {
+            list-style-type: none;
+        }
+    }
+    #search{
+        border: 1px solid black;
+        max-width: @maxWidth;
+    }
+}
+
+mm-result {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    img {
+        height: 60px;
+    }
+    max-width: @maxWidth;
+}
+
+mm-item {
+    max-width: @maxWidth;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    img {
+        height: 60px;
+    }
+    .img-circle {
+        border-radius: 60px;
+    }
+    div {
+        display: flex;
+        flex-direction: column;
+        min-width: 200px;
+        span:nth-of-type(1) {
+            max-width: 170px;
+        }
+        span:nth-of-type(2) {
+            align-self: flex-end;
+        }
+    }
 }
