play/pause video

--- a/app/css/app.less
+++ b/app/css/app.less
@@ -31,6 +31,15 @@ mm-result {
     max-width: @maxWidth;
 }
 
+mm-player{
+    ul {
+        padding: 0;
+        li {
+            list-style-type: none;
+        }
+    }
+}
+
 mm-item {
     max-width: @maxWidth;
     display: flex;
