--- a/app/css/app.less
+++ b/app/css/app.less
@@ -32,7 +32,7 @@ mm-result {
 }
 
 mm-player{
-    ul {
+    ol {
         padding: 0;
         li {
             list-style-type: none;
@@ -62,4 +62,12 @@ mm-item {
             align-self: flex-end;
         }
     }
+}
+
+.hide{
+    display: none;
+}
+
+.show{
+    display: initial;
 }
