--- a/app/css/app.less
+++ b/app/css/app.less
@@ -1,8 +1,5 @@
 @maxWidth : 340px;
-
-body{
-
-}
+body {}
 
 h1 {
     color: green;
@@ -15,7 +12,7 @@ mm-search {
             list-style-type: none;
         }
     }
-    #search{
+    #search {
         border: 1px solid black;
         max-width: @maxWidth;
     }
@@ -31,7 +28,7 @@ mm-result {
     max-width: @maxWidth;
 }
 
-mm-player{
+mm-player {
     ol {
         padding: 0;
         li {
@@ -41,33 +38,40 @@ mm-player{
 }
 
 mm-item {
-    max-width: @maxWidth;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    img {
-        height: 60px;
-    }
-    .img-circle {
-        border-radius: 60px;
-    }
-    div {
+    div:nth-of-type(1) {
+        max-width: @maxWidth;
         display: flex;
-        flex-direction: column;
-        min-width: 200px;
-        span:nth-of-type(1) {
-            max-width: 170px;
+        flex-direction: row;
+        align-items: center;
+        img {
+            height: 60px;
         }
-        span:nth-of-type(2) {
-            align-self: flex-end;
+        .img-circle {
+            border-radius: 60px;
+        }
+        div {
+            display: flex;
+            flex-direction: column;
+            min-width: 200px;
+            span:nth-of-type(1) {
+                max-width: 170px;
+            }
+            span:nth-of-type(2) {
+                align-self: flex-end;
+            }
+        }
+    }
+    div:nth-of-type(2) {
+        input{
+            width: @maxWidth;
         }
     }
 }
 
-.hide{
+.hide {
     display: none;
 }
 
-.show{
+.show {
     display: initial;
 }
