--- a/app/css/app.less
+++ b/app/css/app.less
@@ -14,7 +14,17 @@ mm-search {
     }
     #search {
         border: 1px solid black;
-        max-width: @maxWidth;
+        width: @maxWidth;
+        display: flex;
+        flex-direction: row-reverse;
+        align-items: center;
+        div{
+            width: 100%;
+        }
+
+    }
+    #inputFile {
+        display: none;
     }
 }
 
@@ -52,17 +62,19 @@ mm-item {
         div {
             display: flex;
             flex-direction: column;
+
             min-width: 200px;
-            span:nth-of-type(1) {
+            span{
                 max-width: 170px;
+                align-self: flex-start;
             }
-            span:nth-of-type(2) {
+            span:nth-of-type(3) {
                 align-self: flex-end;
             }
         }
     }
     div:nth-of-type(2) {
-        input{
+        input {
             width: @maxWidth;
         }
     }
