--- a/app/css/app.less
+++ b/app/css/app.less
@@ -1,5 +1,8 @@
 @maxWidth : 340px;
-body {}
+body {
+    font-family: "Montserrat", "Open Sans", "Helvetica Neue", "Arial", sans- serif;
+    font-size: 14px;
+}
 
 h1 {
     color: green;
@@ -18,10 +21,9 @@ mm-search {
         display: flex;
         flex-direction: row-reverse;
         align-items: center;
-        div{
+        div {
             width: 100%;
         }
-
     }
     #inputFile {
         display: none;
@@ -43,12 +45,24 @@ mm-player {
         padding: 0;
         li {
             list-style-type: none;
+            max-width: @maxWidth;
+            margin: 0px 5px;
+            padding: 3px;
+            border: 4px solid #4db6ac;
+            border-top-width: 2px;
+            border-bottom-width: 2px;
+        }
+        li:first-of-type {
+            border-top-width: 4px;
+        }
+        li:last-of-type {
+            border-bottom-width: 4px;
         }
     }
 }
 
 mm-item {
-    div:nth-of-type(1) {
+    >div:nth-of-type(1) {
         max-width: @maxWidth;
         display: flex;
         flex-direction: row;
@@ -57,31 +71,49 @@ mm-item {
             height: 60px;
         }
         .img-circle {
+            height: 50px;
             border-radius: 60px;
         }
         div {
             display: flex;
             flex-direction: column;
-
-            min-width: 200px;
-            span{
-                max-width: 170px;
-                align-self: flex-start;
-            }
-            span:nth-of-type(3) {
-                align-self: flex-end;
+            justify-content: center;
+            align-items: center;
+        }
+        >div:nth-of-type(1) {
+            width: @maxWidth;
+            max-height: 50px;
+            align-items: flex-start;
+            span:nth-of-type(2) {
+                overflow: hidden;
             }
         }
     }
-    div:nth-of-type(2) {
+    >div:nth-of-type(2) {
+        display: flex;
         input {
             width: @maxWidth;
+            margin-left: 3px;
         }
+        span {
+            white-space: nowrap;
+            margin: 3px;
+        }
+    }
+    i {
+        margin: 0 3px;
+        color: #00796b;
+    }
+    .handle {
+        cursor: move;
+    }
+    .nanobar {
+        margin: 0 -3px 2px;
     }
 }
 
 .hide {
-    display: none;
+    display: none !important;
 }
 
 .show {
