--- a/app/css/app.less
+++ b/app/css/app.less
@@ -19,6 +19,10 @@ mm-title {
         font-size: 35px;
         margin: 0;
     }
+    a {
+        text-decoration: none;
+        color: black;
+    }
 }
 
 mm-search {
@@ -131,6 +135,15 @@ mm-social {
     img {
         height: 60px;
     }
+    >div:nth-of-type(1) {
+        display: flex;
+        justify-content: space-between;
+        >div {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-around;
+        }
+    }
 }
 
 mm-parameters {
@@ -138,6 +151,12 @@ mm-parameters {
         margin: 20px;
         display: flex;
         justify-content: center;
+    }
+    ol {
+        padding: 0;
+        li {
+            list-style-type: none;
+        }
     }
 }
 
