--- a/app/css/app.less
+++ b/app/css/app.less
@@ -98,6 +98,8 @@ mm-item {
         }
         >div:nth-of-type(1) {
             width: @maxWidth;
+            max-width: @maxWidth;
+            overflow: hidden;
             max-height: 50px;
             align-items: flex-start;
             span:nth-of-type(2) {
