--- a/app/css/app.less
+++ b/app/css/app.less
@@ -144,6 +144,13 @@ mm-social {
             display: flex;
             flex-direction: column;
             justify-content: space-around;
+            div{
+                border: 0.5px solid #bbb;
+                padding: 2px;
+                input{
+                    border:none;
+                }
+            }
         }
     }
 }
