show error with title color

--- a/app/css/app.less
+++ b/app/css/app.less
@@ -23,6 +23,9 @@ mm-title {
         text-decoration: none;
         color: black;
     }
+    .error{
+        color: red;
+    }
 }
 
 mm-search {
@@ -55,6 +58,9 @@ mm-result {
         height: 60px;
     }
     max-width: @maxWidth;
+    i{
+        color: #4caf50;
+    }
 }
 
 mm-player {
