--- a/app/css/app.less
+++ b/app/css/app.less
@@ -1,4 +1,4 @@
-@maxWidth : 340px;
+@maxWidth : 314px;
 body {
     font-family: "Montserrat", "Open Sans", "Helvetica Neue", "Arial", sans- serif;
     font-size: 14px;
@@ -11,7 +11,7 @@ mm-title {
         display: inline-flex;
         justify-content: space-around;
         align-items: center;
-        width: @maxWidth+4px;
+        width: @maxWidth+2px;
         background-image: url(http://www.tinygraphs.com/isogrids/banner/random/gradient?theme=bythepool&numcolors=4&h=50&w=400&xt=25);
         background-size: cover;
     }
@@ -23,12 +23,13 @@ mm-title {
         text-decoration: none;
         color: black;
     }
-    .error{
+    .error {
         color: red;
     }
 }
 
 mm-search {
+    width: @maxWidth;
     ul {
         padding: 0;
         li {
@@ -37,7 +38,6 @@ mm-search {
     }
     #search {
         border: 1px solid black;
-        width: @maxWidth;
         display: flex;
         flex-direction: row-reverse;
         align-items: center;
@@ -58,7 +58,7 @@ mm-result {
         height: 60px;
     }
     max-width: @maxWidth;
-    i{
+    i {
         color: #4caf50;
     }
 }
@@ -150,11 +150,11 @@ mm-social {
             display: flex;
             flex-direction: column;
             justify-content: space-around;
-            div{
+            div {
                 border: 0.5px solid #bbb;
                 padding: 2px;
-                input{
-                    border:none;
+                input {
+                    border: none;
                 }
             }
         }
@@ -171,6 +171,33 @@ mm-parameters {
         padding: 0;
         li {
             list-style-type: none;
+        }
+    }
+    ol:nth-of-type(2) {
+        padding: 0;
+        margin: 0;
+        li {
+            max-height: 100px;
+            list-style-type: none;
+            border: 4px solid #4db6ac;
+            border-top-width: 2px;
+            border-bottom-width: 2px;
+        }
+        li:first-of-type {
+            border-top-width: 4px;
+        }
+        li:last-of-type {
+            border-bottom-width: 4px;
+        }
+    }
+    .contributor {
+        display: flex;
+        align-items: center;
+        img {
+            height: 60px;
+        }
+        span:nth-of-type(2) {
+            color: red;
         }
     }
 }
